# django-gc

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
django_gc/: apps.py  core.py  registry.py
django_gc/management/commands/: gc.py  gc_inspect.py
tests/: settings.py  test_gc_command.py  test_registry.py
tests/testapp/: models.py
